--- a/styles.css
+++ b/styles.css
@@ -203,6 +203,20 @@ section{
       flex-wrap: wrap;
       font-size: 16px;
       height: 250px;
-      width: 56%;
+      width: 60%;
+      max-width: 100%;
+      left: 18%;
     }
+    h1.title-w{
+      margin: auto;
+      text-align: center;
+      height: 40px;
+      font-size: 22px;
+      padding: 6px;
+      width: 290px;
+      color: #FFF;
+      border-radius: 24px;
+      margin-top:4px;
+      background: linear-gradient(to right,#ff8a00,#da1b60);
+    } 
   }
