--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ body{
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: rgb(16, 14, 23);
-    /* background-color: rgba(0,0,0, 0.9); */
+    background-color: rgb(155, 28, 9);
+    background-color: rgba(155, 35, 9, 0.967);
     overflow-x: hidden;
     transition: 0.5s;
   }
