--- a/styles.css
+++ b/styles.css
@@ -206,9 +206,9 @@ h3.about-h {
 /* project skills */
 .skills-s{
   display: flex;
-  flex-wrap: row wrap;
+  flex-wrap: wrap;
   height: 70vh;
-  background-color: #fdf2f2;
+  background-image: linear-gradient(180deg,hsla(0,0%,100%,.45),hsla(0,0%,100%,.45)),url(lapi.jpg);
   text-align: center;
   justify-content: center;
 }
