--- a/styles.css
+++ b/styles.css
@@ -211,6 +211,9 @@ h3.about-h {
   background-image: linear-gradient(180deg,hsla(0,0%,100%,.45),hsla(0,0%,100%,.45)),url(lapi.jpg);
   text-align: center;
   justify-content: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .skills-c{
   text-align: center;
