--- a/styles.css
+++ b/styles.css
@@ -184,8 +184,9 @@ section{
     display: flex;
     flex-wrap: row wrap;
     height: 70vh;
-    background: linear-gradient(to top left, rgb(237, 243, 243) 40%, rgba(44, 149, 197, 0.87) 60%),
-    linear-gradient(to bottom left, rgb(248, 81, 81) 44%, rgba(10, 10, 10, 0.815) 28%);
+    background-color: #f1f0f7;
+    /* background: linear-gradient(to right, rgb(176, 204, 204) 43%, rgba(241, 241, 241, 0.966) 60%),
+    linear-gradient(to bottom left, rgba(155, 148, 148, 0.877) 54%, rgba(241, 213, 213, 0.815) 63%); */
     text-align: center;
   }
 
@@ -198,7 +199,7 @@ section{
 
 
 h3.about-h {
-  color: cornsilk;
+  color: rgb(10, 163, 31);
   z-index: 2;
   font-family: monospace;
   text-decoration-line: underline;
@@ -208,7 +209,7 @@ h3.about-h {
   display: flex;
   flex-wrap: wrap;
   height: 70vh;
-  background-image: linear-gradient(180deg,hsla(0,0%,100%,.45),hsla(0,0%,100%,.45)),url(lapi.jpg);
+  background-image: linear-gradient(180deg,hsla(0,0%,10%,.65),hsla(0,0%,10%,.45)),url(lapi.jpg);
   text-align: center;
   justify-content: center;
   background-position: center;
@@ -225,7 +226,7 @@ h3.about-h {
   
 }
 .skills-s h3{
-  color: rgb(23, 26, 23);
+  color: #FFF;
   font-size: 24px;
 
   z-index: 0;
