--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,7 @@ section{
   .projects-n{
     display: flex;
     flex-wrap: row wrap;
-    height: 70vh;
+    height: 60vh;
     background-color: #f1f0f7;
     /* background: linear-gradient(to right, rgb(176, 204, 204) 43%, rgba(241, 241, 241, 0.966) 60%),
     linear-gradient(to bottom left, rgba(155, 148, 148, 0.877) 54%, rgba(241, 213, 213, 0.815) 63%); */
@@ -208,13 +208,15 @@ h3.about-h {
 .skills-s{
   display: flex;
   flex-wrap: wrap;
-  height: 70vh;
+  height: 55vh;
   background-image: linear-gradient(180deg,hsla(0,0%,10%,.65),hsla(0,0%,10%,.45)),url(lapi.jpg);
   text-align: center;
   justify-content: center;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  margin: 0 auto;
+  border-radius: 10px;
 }
 .skills-c{
   text-align: center;
@@ -349,7 +351,7 @@ h3.about-h {
     .projects-n{
       display: flex;
       flex-wrap: row wrap;
-      height: 90vh;
+      height: 58vh;
       text-align: center;
     }
   }
