--- a/styles.css
+++ b/styles.css
@@ -373,8 +373,12 @@ p.last-p{
     .projects-n{
       display: flex;
       flex-wrap: row wrap;
-      height: 78vh;
+      height: 75vh;
       text-align: center;
+    }
+    .pro-content{
+      font-size: 18px;
+      
     }
   }
   @media only screen and (max-width: 767px) and (min-width: 320px){
