--- a/styles.css
+++ b/styles.css
@@ -330,6 +330,27 @@ p.last-p{
 .services{
   height: 70vh;
   background-color: #FFF;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: space-around;
+}
+.web {
+  height: fit-content;
+  width: 280px;
+  padding: 20px;
+  border-radius: 12px;
+  margin: auto;
+  background-color: rgb(237, 238, 238);
+  text-align: center;
+  
+}
+img.res-image{
+  height: 80px;
+  
+}
+.web p{
+  font-size: 18px;
+
 }
 
 
@@ -380,8 +401,21 @@ p.last-p{
       font-size: 18px;
       
     }
+    .services{
+      display: flex;
+      flex-wrap: wrap;
+      height: fit-content;
+    }
   }
   @media only screen and (max-width: 767px) and (min-width: 320px){
-
+    .services{
+      display: flex;
+      flex-wrap: wrap;
+      height: fit-content;
+    }
+    .web{
+      margin-bottom: 10px;
+      margin-top: 10px;
+    }
   }
 
