--- a/styles.css
+++ b/styles.css
@@ -493,7 +493,8 @@ img.res-image{
   display: flex;
   flex-wrap: wrap;
   flex-grow: 2;
-  background-color:red;
+  background: linear-gradient(to top right, rgb(253, 252, 253) 41%, rgba(193, 191, 201, 0.966) 83%),      linear-gradient(to bottom left, rgb(233, 232, 232) 56%, rgba(58, 49, 150, 0.815) 47%);
+  background-position: fixed;
   justify-content: space-around;
   text-align: center;
   width: 25%;
