--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,14 @@ body {
 }
 span.humbuger {
   color: #fff;
-  font-size: 30px;
+  font-size: 26px;
   cursor: pointer;
   z-index: 1;
-  height: 51px;
+  height: 52px;
   left: 30px;
-  padding: 4px;
+  padding: 5px;
   position: absolute;
-  border-radius: 36px 88px;
+  border-radius: 43px 79px;
   top: 15px;
   font-family: serif;
   font-weight: 800;
@@ -85,7 +85,7 @@ span.humbuger {
 }
 .home-content {
   background-color: rgba(0, 0, 0, 0.611); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.432); /* Black w/opacity/see-through */
+  background-color: rgba(0, 0, 0, 0.632); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
   border: 3px solid #1b191917;
@@ -99,7 +99,13 @@ span.humbuger {
   border-radius: 150px 19px;
   padding: 16px;
 }
-
+.overlaya {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(10, 10, 40, 0.75);
+}
 section {
   height: 60vh;
   background-image: url("img/computer.jpg");
@@ -584,7 +590,7 @@ img.res-image {
     display: flex;
     flex-wrap: wrap;
     font-size: 16px;
-    height: 250px;
+    height: 212px;
     width: 60%;
     max-width: 100%;
     background-color: rgba(42, 6, 83, 0.432);
